<?xml version="1.0"?>
<package>
  <name>rrbot_description</name>
  <version>0.0.0</version>
  <description>The rrbot_description package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/rrbot_description</url> -->

  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>