<package>
  <name>rrbot_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>rrbot_gazebo</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ros_control_gazebo</build_depend> 
  <build_depend>ros_control_gazebo_plugin</build_depend> 
  <build_depend>effort_controllers</build_depend> 
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>hardware_interface</build_depend> 
  <run_depend>rrbot_description</run_depend> 
  <run_depend>rrbot_gazebo</run_depend> 
  <run_depend>hardware_interface</run_depend> 
  <run_depend>ros_control_gazebo</run_depend> 
  <run_depend>ros_control_gazebo_plugin</run_depend> 
  <run_depend>effort_controllers</run_depend> 
  <run_depend>gazebo_ros</run_depend> 

  <export>
    <ros_control_gazebo plugin="${prefix}/rrbot_ros_control_gazebo_plugin.xml"/>
  </export>
</package>
