<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrbot_moveit_demo_nodes</name>
  <version>0.2.0</version>
  <description>
    Config and launch files to run a MoveIt2 demo with the rrbot.
    This example will use Gazebo classic to simulate the robot and ROS 2 to communicate the rrbot with MoveIt2.
  </description>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernández</maintainer>
  <license>Apache 2</license>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_common</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>rrbot_description</exec_depend>
  <exec_depend>rrbot_gazebo</exec_depend>
  <exec_depend>rrbot_moveit_config</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
